tests/compile_fail/enum_every_variant_has_zero_weight.stderr
error: There must be at least one variant with a non-zero weight
 --> tests/compile_fail/enum_every_variant_has_zero_weight.rs:4:10
  |
4 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one variant with a non-zero weight
  --> tests/compile_fail/enum_every_variant_has_zero_weight.rs:10:10
   |
10 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)

error: There must be at least one variant with a non-zero weight
  --> tests/compile_fail/enum_every_variant_has_zero_weight.rs:18:10
   |
18 | #[derive(StandardDistribution)]
   |          ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `StandardDistribution` (in Nightly builds, run with -Z macro-backtrace for more info)
